# cetra

./: demo_workflow.yaml  pyproject.toml
notebooks/: parse_knowledge_to_mermaid.ipynb  workflow_parser.ipynb
resources/: knowledge.jsonl
resources/yaml_flow/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  27.yaml  28.yaml  29.yaml  3.yaml  30.yaml  31.yaml  32.yaml  33.yaml  34.yaml  35.yaml  36.yaml  37.yaml  38.yaml  39.yaml  4.yaml  40.yaml  41.yaml  42.yaml  5.yaml  6.yaml  (+3 more)
src/cetra/: __init__.py  agent_factory.py  models.py  parser.py
tests/: __init__.py  test_parser.py
