[project]
name = "cetra"
version = "0.1.0"
description = "Contextual Execution Through Reactive Agents - YAML workflow orchestration for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "controlflow",
    "pyyaml", 
    "pydantic",
    "python-dotenv",
]

[project.scripts]
cetra = "cetra:main"

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
